prep for workshop

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 **/_build
 *.iml
 tox.ini
+introduction_to_amazon_algorithms/jumpstart-foundation-models/*.jsonl
+introduction_to_amazon_algorithms/jumpstart-foundation-models/*.json
